# FateMMO_GameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  imgui.ini  test_scene_rt_tmp2.json  vcpkg.json
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: ci.yml
Docs/: ANIMATION_WINDUP_SYSTEM.md  DATABASE_REFERENCE.md  ENGINE_STATE_AND_FEATURES.md  PRODUCTION_READINESS_REVIEW.md  QUEST_AND_NPC_GUIDE.md  RESEARCH_PROMPT_MULTI_ZONE_FUZZING_DBPOOL.md  SESSION_HANDOFF_EDITOR_POLISH.md  content-pipeline-guide.md  rmlui_migration_plan.md
Docs/Balance/: DAMAGE_PROGRESSION_ANALYSIS.md  GAME_BALANCE_REFERENCE.md
Docs/Guides/: AUDIO_GUIDE.md  INSTANCED_DUNGEONS_GUIDE.md  QUEST_AND_NPC_GUIDE.md  SCENARIO_TESTING_GUIDE.md
Docs/Items/: EQUIPMENT_LIST.md
Docs/Mobs/: MOB_CREATION_GUIDE.md  SPAWN_ZONE_CREATION.md
Docs/Research/: combat_sync_server_authority.md  content_art_pipeline_scaling.md  cross_platform_build_system.md  ecs_serialization_patterns.md  editor_architecture_advanced.md  editor_customization.md  engine_subsystems_deepdive.md  launch_operations_blueprint.md  multizone_scaling_persistence.md  production_deployment_platforms.md  production_hardening_patterns.md  security_polish_audit.md  spatial_hash_chunk_streaming.md  tile_editor_autotiling.md  twom_game_design_reference.md  unity_style_editor_architecture.md
Docs/UpdateDocs/: CHANGELOG.md  GAME_SYSTEMS.md  SERVER_AND_NETWORKING.md
Docs/migrations/: 001_full_schema.sql  001_phase7_base_schema.sql  002_bank_and_pets.sql  003_gauntlet_seed_data.sql  004_scene_spawn_points.sql  005_spawn_zones.sql  006_inventory_slot_unique.sql  007_enchant_and_crafting.sql  008_pet_definitions.sql  008_pk_status_and_faction.sql  009_admin_roles.sql  010_scene_mob_sync.sql  011_dungeon_support.sql  020_items_and_recall.sql  025_guild_faction_id.sql  fkeys.txt  indexes.txt
Documents/Demo/: README.md  api-reference.md  architecture-manual.md  asset-pipeline.md  editor-user-guide.md  networking-protocol.md  publishing-guide.md  quick-start.md  troubleshooting.md
android/: build.sh  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/jni/: CMakeLists.txt
assets/: paper_doll.json
assets/data/: palettes.json  pvp_balance.json
assets/fonts/: default.json  fonts.json
assets/scenes/: scene.json
assets/shaders/: blit.frag  bloom_extract.frag  blur.frag  fullscreen_quad.vert  grid.frag  light.frag  postprocess.frag  sprite.frag  sprite.vert  tile_chunk.frag  tile_chunk.vert
config/: server.crt
engine/: app.cpp  app.h  ui_stubs.h
engine/asset/: asset_handle.h  asset_registry.cpp  asset_registry.h  asset_source.cpp  asset_source.h  file_watcher.cpp  file_watcher.h  loaders.cpp  loaders.h
engine/components/: register_engine_components.h  sprite_component.h  tile_layer_component.h
engine/core/: atomic_write.cpp  atomic_write.h  circuit_breaker.h  engine_error.h  logger.h  types.h
engine/ecs/: archetype.h  archetype_query.h  command_buffer.h  component.h  component_meta.cpp  component_meta.h  component_registry.h  component_traits.h  entity.cpp  entity.h  entity_handle.h  entity_inline.h  persistent_id.h  prefab.cpp  prefab.h  prefab_variant.cpp  prefab_variant.h  reflect.h  world.cpp  world.h
engine/editor/: animation_editor.cpp  animation_editor.h  animation_preview.cpp  animation_preview.h  aseprite_importer.cpp  aseprite_importer.h  asset_browser.cpp  asset_browser.h  combat_text_editor.cpp  combat_text_editor.h  content_browser_panel.cpp  content_browser_panel.h  editor.cpp  editor.h  editor_build.h  editor_hot_reload_panel.cpp  editor_inspector.cpp  editor_shim.h  editor_tile.cpp  log_viewer.cpp  log_viewer.h  memory_panel.cpp  memory_panel.h  mobai_tune_panel.cpp  mobai_tune_panel.h  node_editor.cpp  node_editor.h  paper_doll_panel.cpp  paper_doll_panel.h  property_inspector.cpp  property_inspector.h  role_nameplates_panel.cpp  tile_tools.cpp  tile_tools.h  ui_editor_panel.cpp  ui_editor_panel.h  undo.cpp  undo.h
engine/game/: skill_loadout.cpp  skill_loadout.h
engine/gameplay2d/: gameplay2d.h  register_gameplay2d.h
engine/input/: action_map.h  input.cpp  input.h  input_buffer.h
engine/job/: fiber.h  fiber_minicoro.cpp  fiber_win32.cpp  job_system.cpp  job_system.h
engine/memory/: arena.h  (+4 more)
examples/: demo_app.cpp
game/: animation_loader.cpp  animation_loader.h  combat_prediction.h  entity_factory.cpp  entity_factory.h  game_app.cpp  game_app.h  main.cpp  procedural_tile_generator.cpp  procedural_tile_generator.h  register_components.h
ios/: ExportOptions.plist  Info.plist.in  LaunchScreen.storyboard  PrivacyInfo.xcprivacy  build-ios.sh  build.sh
scripts/: backup_db.sh
server/: dungeon_manager.cpp  dungeon_manager.h  gm_commands.h  nonce_manager.h  player_lock.h  rate_limiter.h  scene_spawn_coordinator.cpp  scene_spawn_coordinator.h  server_app.cpp  server_app.h  server_main.cpp  server_spawn_manager.cpp  server_spawn_manager.h  target_validator.h
tests/: test_allocator_registry.cpp  test_animation_loader.cpp  test_appearance.cpp  test_archetype.cpp  test_arena.cpp  test_arena_manager.cpp  test_asset_handle.cpp  test_asset_registry.cpp  test_audio_manager.cpp  test_auth_protocol.cpp  test_autotile.cpp  test_bag_expansion.cpp  test_bank_handler.cpp  test_bank_storage.cpp  test_battlefield.cpp  test_byte_stream.cpp  test_cc_edge_cases.cpp  test_chat_server.cpp  test_chunk_lifecycle.cpp  test_chunk_renderer.cpp  test_circuit_breaker.cpp  test_client_skill_cache.cpp  test_collection_own_item.cpp  test_combat_pipeline.cpp  test_combat_system.cpp  test_combat_text_config.cpp  test_connection.cpp  test_connection_cookie.cpp  test_consumable_handler.cpp  test_content_validator.cpp  test_core_extraction.cpp  test_death_lifecycle.cpp  test_death_respawn.cpp  test_device_info.cpp  test_dialogue_node_editor.cpp  test_dialogue_tree.cpp  test_double_cast.cpp  test_dungeon_manager.cpp  test_dungeon_transfer.cpp  test_economic_nonces.cpp  (+82 more)
tools/: migrate_quest_dialogue.cpp  pre_push_windows_msvc.ps1  test_ci_preflight.ps1
(+582 files in other folders)
